Added more test cases and update build scripts with container launch capabilities for testing (#3)
Co-authored-by: Nihar Sharma <niharsharma@Nihars-MacBook-Air.local>